@@ -14,6 +14,7 @@ offers extended widgets based upon the original PyGTK widgets.
   Optional
 
     - gazpacho > 0.6.5   http://ftp.gnome.org/pub/GNOME/sources/gazpacho/
+    - zope.interfaces    http://www.zope.org/Products/ZopeInterface
 
 * Installation
 
