@@ -1,3 +1,8 @@
+2006-03-06  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/component.py: 
+	(get_utility): Add limited support for zope.interfaces.
+
 2006-03-05  Johan Dahlin  <jdahlin@async.com.br>
 
 	* gazpacho-plugin/kiwiwidgets.xml:
